Source/WebCore/platform/gtk/PasteboardHelper.h
@@ -25,10 +25,10 @@
 #ifndef PasteboardHelper_h
 #define PasteboardHelper_h
 
+#include "GRefPtrGtk.h"
 #include <wtf/Function.h>
 #include <wtf/Noncopyable.h>
 #include <wtf/Vector.h>
-#include <wtf/glib/GRefPtr.h>
 
 namespace WebCore {
 
